--- a/src/components/06-helpers/_text.scss
+++ b/src/components/06-helpers/_text.scss
@@ -1,4 +1,7 @@
 /* Text Sizes */
+
+@use '~Settings/colors'as *;
+
 .text-small {
   font-size: 12px;
 }
@@ -31,94 +34,94 @@
 
 /* Text colors */
 .text-red {
-  color: #cc3524
+  color: $regular-red;
 }
 
 .text-dark-red {
-  color: #951919
+  color: $dark-red;
 }
 
 .text-light-red {
-  color: #ff3e2d
+  color: $light-red;
 }
 
 .text-violet {
-  color: #7b1fa2
+  color: $regular-pink;
 }
 
 .text-dark-violet {
-  color: #4a148c
+  color: $dark-pink
 }
 
 .text-light-violet {
-  color: #ab47bc
+  color: $light-pink;
 }
 
 .text-blue {
-  color: #2d7daa
+  color: $regular-blue;
 }
 
 .text-dark-blue {
-  color: #11455d
+  color: $dark-blue;
 }
 
 .text-light-blfe {
-  color: #00BFA5
+  color: $regular-alpha;
 }
 
 .text-green {
-  color: #7cb342
+  color: $regular-green;
 }
 
 .text-dark-green {
-  color: #00927e
+  color: $dark-green;
 }
 
 .text-light-green {
-  color: #8bc34a
+  color: $light-green;
 }
 
 .text-orange {
-  color: #ef7622
+  color: $regular-orange
 }
 
 .text-dark-orange {
-  color: #a54715
+  color: $dark-orange;
 }
 
 .text-light-orange {
-  color: #ffa000
+  color: $light-orange
 }
 
 .text-grey {
-  color: #6e6e6e
+  color: $regular-grey;
 }
 
 .text-dark-grey {
-  color: #5C5C5C
+  color: $mid-dark-grey;
 }
 
 .text-light-grey {
-  color: #c3c3c3
+  color: $mid-light-grey
 }
 
 .text-light-grey2 {
-  color: #eeeeee
+  color: $light-grey;
 }
 
 .text-light-grey3 {
-  color: #f5f5f5
+  color: $sapphire-light
 }
 
 .text-white {
-  color: #fff
+  color: $sapphire-white;
 }
 
 .text-black {
-  color: #333333
+  color: $dark-grey
 }
 
 .text-primary-color {
-  color: #00BFA5
-    /*primary-color*/
+  color: $regular-alpha;
+  /*primary-color*/
 }
