--- a/src/components/02-generic/_headings.scss
+++ b/src/components/02-generic/_headings.scss
@@ -1,8 +1,10 @@
 /* Headings */
+@use '~Settings/colors'as *;
+
 h1,
 .h1,
 .heading1 {
-  color: #002B49;
+  color: $sapphire-care-blue3;
   /*secondary-color*/
   font-size: 24px;
   font-weight: 700;
@@ -12,14 +14,14 @@ h1,
 h2,
 .h2,
 .heading2 {
-  color: #6E6E6E;
+  color: $regular-grey;
   font-size: 18px
 }
 
 h3,
 .h3,
 .heading3 {
-  color: #002B49;
+  color: $sapphire-care-blue3;
   /*secondary-color*/
   font-size: 18px;
   font-weight: 600;
