--- a/src/components/03-elements/_input.scss
+++ b/src/components/03-elements/_input.scss
@@ -1,14 +1,14 @@
 input.checkbox:before {
-  border: 1px solid #77909C;
+  border: 1px solid $regular-grey;
   border-radius: 2px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 input.checkbox:checked:before {
-  background-color: #00BFA5;
+  background-color: $regular-alpha;
   /*primary-color*/
-  border: 1px solid #00BFA5;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
 }
 
@@ -23,33 +23,33 @@ input.checkbox:checked:after {
 }
 
 input.checkbox[disabled]:before {
-  border: 1px solid #eceff1;
+  border: 1px solid $light-grey;
 }
 
 /* Input invalid red color */
 
 .animated-label-input input[data-input].not-valid {
-  border-bottom: 1px solid #cc3524;
+  border-bottom: 1px solid $regular-red;
 }
 
 
 
 input[data-input]:focus,
 textarea[data-textarea]:focus {
-  border: 1px solid #0288d1;
+  border: 1px solid $regular-blue;
 }
 
 input[data-input]:empty,
 textarea[data-textarea]:empty {
-  background: #fff;
-  border: 1px solid #fff;
-  border-bottom: 1px solid #1DC5AE;
-  color: #333333;
+  background: $sapphire-white;
+  border: 1px solid $sapphire-white;
+  border-bottom: 1px solid $regular-alpha;
+  color: $dark-grey;
 }
 
 input[data-input]:empty:focus,
 textarea[data-textarea]:empty:focus {
-  border: 1px solid #1DC5AE;
+  border: 1px solid $regular-alpha;
 }
 
 
@@ -57,7 +57,7 @@ input[data-input][disabled],
 input[data-input][readonly],
 textarea[data-textarea][disabled],
 textarea[data-textarea][readonly] {
-  border: 1px solid #EEEEEE;
+  border: 1px solid $light-grey;
 }
 
 
