--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -4,12 +4,12 @@
 .btn,
 .btn:hover,
 .btn:focus {
-  background: #00bfa5;
+  background: $regular-alpha;
   /*primary-color*/
-  border: 1px solid #00bfa5;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
   border-radius: 4px;
-  color: #fff;
+  color: $sapphire-white;
   font-size: 16px;
   font-weight: 700;
   letter-spacing: .5px;
@@ -18,9 +18,9 @@
 }
 
 .btn:active {
-  background-color: #007e85;
-  border: 1px solid #007e85;
-  color: #fff;
+  background-color: $regular-beta;
+  border: 1px solid $regular-beta;
+  color: $sapphire-white;
 
   -webkit-filter: brightness(1);
   filter: brightness(1);
@@ -30,10 +30,10 @@
 .btn[disabled]:hover,
 .btn[disabled]:focus,
 .btn[disabled]:active {
-  background-color: #eee;
-  border: 1px solid #eee;
+  background-color: $light-grey;
+  border: 1px solid $light-grey;
   box-shadow: none;
-  color: #cecece;
+  color: $mid-light-grey;
 }
 
 /* button: primary | active | disabled */
@@ -41,19 +41,19 @@
 .btn-primary,
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #00bfa5;
+  background-color: $regular-alpha;
   /*primary-color*/
-  border: 1px solid #00bfa5;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
-  color: #fff;
+  color: $sapphire-white;
 }
 
 .btn-primary:active {
-  background-color: #007e85;
+  background-color: $regular-beta;
   /*primary-color*/
-  border: 1px solid #007e85;
+  border: 1px solid $regular-beta;
   /*primary-color*/
-  color: #fff;
+  color: $sapphire-white;
 
   -webkit-filter: brightness(1);
   filter: brightness(1);
@@ -63,10 +63,10 @@
 .btn-primary[disabled]:hover,
 .btn-primary[disabled]:focus,
 .btn-primary[disabled]:active {
-  background-color: #eee;
-  border: 1px solid #eee;
+  background-color: $light-grey;
+  border: 1px solid $light-grey;
   box-shadow: none;
-  color: #cecece;
+  color: $mid-light-grey;
 }
 
 /* button: tertiary | active | disabled */
@@ -75,17 +75,17 @@
 .btn-tertiary:hover,
 .btn-tertiary:focus {
   background-color: transparent;
-  border: 1px solid #00bfa5;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
-  color: #00bfa5;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .btn-tertiary:active {
   background-color: transparent;
-  border: 1px solid #00bfa5;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
-  color: #00bfa5;
+  color: $regular-alpha;
   /*primary-color*/
 
   -webkit-filter: brightness(1);
@@ -97,8 +97,8 @@
 .btn-tertiary[disabled]:focus,
 .btn-tertiary[disabled]:active {
   background: transparent;
-  border-color: #cecece;
-  color: #cecece;
+  border-color: $mid-light-grey;
+  color: $mid-light-grey;
 }
 
 /* button: cancel | active | disabled */
@@ -108,7 +108,7 @@
   background: transparent;
   border-color: transparent;
   box-shadow: none;
-  color: #002b49;
+  color: $sapphire-care-blue3;
   /*secondary-color*/
   font-size: 14px;
   font-weight: 400;
@@ -118,7 +118,7 @@
   background-color: transparent;
   border-color: transparent;
   box-shadow: none;
-  color: #002b49;
+  color: $sapphire-care-blue3;
   /*secondary-color*/
 }
 
@@ -129,7 +129,7 @@
   background-color: transparent;
   border: transparent;
   box-shadow: none;
-  color: #6e6e6e;
+  color: $regular-grey;
 }
 
 /* button: orange-cancel | active | disabled */
@@ -137,18 +137,18 @@
 .btn.btn-orange-cancel:hover,
 .btn.btn-orange-cancel:focus {
   background: transparent;
-  border-color: #ff3e2d;
+  border-color: $regular-orange;
   box-shadow: none;
-  color: #ff3e2d;
+  color: $regular-orange;
   font-size: 14px;
   font-weight: 400;
 }
 
 .btn.btn-orange-cancel:active {
   background-color: transparent;
-  border-color: #ff3e2d;
+  border-color: $regular-orange;
   box-shadow: none;
-  color: #ff3e2d;
+  color: $regular-orange;
 }
 
 .btn.btn-orange-cancel[disabled],
@@ -156,26 +156,26 @@
 .btn.btn-orange-cancel[disabled]:focus,
 .btn.btn-orange-cancel[disabled]:active {
   background: transparent;
-  border-color: #cecece;
-  color: #cecece;
+  border-color: $mid-light-grey;
+  color: $mid-light-grey;
 }
 
 /* button: success | active | disabled */
 .btn-success,
 .btn-success:hover,
 .btn-success:focus {
-  background-color: #7cb342;
-  border-color: #7cb342;
-  color: #fff;
+  background-color: $regular-green;
+  border-color: $regular-green;
+  color: $sapphire-white;
 }
 
 /* button: danger | active | disabled */
 .btn-danger,
 .btn-danger:hover,
 .btn-danger:focus {
-  background-color: #de1504;
-  border-color: #de1504;
-  color: #fff;
+  background-color: $regular-red;
+  border-color: $regular-red;
+  color: $sapphire-white;
 }
 
 /*button: small */
@@ -199,9 +199,9 @@
 [class^="btn background-"][disabled],
 [class^="btn background-"][disabled]:hover,
 [class^="btn background-"][disabled]:focus {
-  background-color: #eceff1;
+  background-color: $mid-light-grey;
   border: none;
-  color: #fff;
+  color: $sapphire-white;
 }
 
 /* Button to Select Date */
@@ -209,7 +209,7 @@ a.btn.select-date,
 a.btn.select-date:hover {
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
-  color: #333 !important;
+  color: $dark-grey !important;
   font-size: 16px !important;
   font-weight: bold;
   line-height: 35px;
@@ -220,7 +220,7 @@ a.btn.select-date:hover {
 }
 
 a.btn.select-date .sc {
-  color: #00BFA5;
+  color: $regular-alpha;
   font-size: 20px;
   margin-right: 10px;
   /*primary-color*/
@@ -228,17 +228,17 @@ a.btn.select-date .sc {
 
 /* default button on the colored background*/
 .layout.blank.bg-colored .btn {
-  border-color: #fff;
-  color: #fff;
+  border-color: $sapphire-white;
+  color: $sapphire-white;
 }
 
 .layout.blank.bg-colored .btn:active {
-  border-color: #007E85;
+  border-color: $regular-beta;
 }
 
 /* Button Group */
 .button-group {
-  background: #EAEAEA;
+  background: $sapphire-light;
   border-radius: 4px;
   overflow: hidden;
   padding: 4px;
@@ -246,22 +246,22 @@ a.btn.select-date .sc {
 
 button.button-group-item {
   border-radius: 4px;
-  color: #455a64;
+  color: $mid-dark-grey;
   line-height: 12px;
   min-height: 36px;
   padding: 5px 10px;
 }
 
 button.button-group-item.button-group-selected-item {
-  background-color: #00BFA5;
+  background-color: $regular-alpha;
   /*primary-color*/
-  border-color: #00BFA5;
+  border-color: $regular-alpha;
   /*primary-color*/
-  color: #fff;
+  color: $sapphire-white;
 }
 
 button.button-group-item.button-group-selected-item[disabled] {
-  background-color: #eee;
-  border-color: #eee;
-  color: #b0bec5;
+  background-color: $light-grey;
+  border-color: $light-grey;
+  color: $mid-dark-grey;
 }
