--- a/src/components/06-helpers/_avatar.scss
+++ b/src/components/06-helpers/_avatar.scss
@@ -1,137 +1,139 @@
 /* Avatar */
+@use '~Settings/colors'as *;
+
 .avatar {
-  background: #C3C3C3;
-  border: 1px solid #00BFA5;
+  background: $mid-light-grey;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
-  color: #6E6E6E;
+  color: $regular-grey;
   font-size: 14px;
   font-weight: 600;
 }
 
 .avatar.background-primary-color {
   background-color: transparent;
-  border: 1px solid rgba(22, 151, 159, .5);
+  border: 1px solid rgba(0, 191, 165, .5);
   /*primary-color*/
-  color: #00BFA5;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .avatar.background-red {
   background-color: transparent;
-  border: 1px solid rgba(188, 23, 34, 0.5);
-  color: #bc1722;
+  border: 1px solid rgba(255, 62, 45, 0.5);
+  color: $regular-red;
 }
 
 .avatar.background-dark-red {
   background-color: transparent;
-  border: 1px solid rgba(149, 25, 25, .5);
-  color: #951919;
+  border: 1px solid rgba(177, 1, 0, .5);
+  color: $dark-red;
 }
 
 .avatar.background-light-red {
   background-color: transparent;
-  border: 1px solid rgba(231, 43, 55, .5);
-  color: #e72b37;
+  border: 1px solid rgba(250, 213, 213, .5);
+  color: $light-red;
 }
 
 .avatar.background-violet {
   background-color: transparent;
-  border: 1px solid rgba(123, 31, 162, .5);
-  color: #7b1fa2;
+  border: 1px solid rgba(195, 43, 135, .5);
+  color: $regular-pink;
 }
 
 .avatar.background-dark-violet {
   background-color: transparent;
-  border: 1px solid rgba(74, 20, 140, .5);
-  color: #4a148c;
+  border: 1px solid rgba(152, 2, 99, .5);
+  color: $dark-pink;
 }
 
 .avatar.background-light-violet {
   background-color: transparent;
-  border: 1px solid rgba(171, 71, 188, .5);
-  color: #ab47bc;
+  border: 1px solid rgba(200, 146, 179, .5);
+  color: $light-pink;
 }
 
 .avatar.background-blue {
   background-color: transparent;
-  border: 1px solid rgba(1, 145, 155, .5);
-  color: #01919b;
+  border: 1px solid rgba(3, 155, 229, .5);
+  color: $regular-blue;
 }
 
 .avatar.background-dark-blue {
   background-color: transparent;
-  border: 1px solid rgba(13, 71, 161, .5);
-  color: #0d47a1;
+  border: 1px solid rgba(25, 73, 104, .5);
+  color: $dark-blue;
 }
 
 .avatar.background-light-blue {
   background-color: transparent;
-  border: 1px solid rgba(1, 180, 189, .5);
-  color: #01b4bd;
+  border: 1px solid rgba(196, 240, 235, .5);
+  color: $light-blue;
 }
 
 .avatar.background-green {
   background-color: transparent;
-  border: 1px solid rgba(129, 165, 36, .5);
-  color: #81a524;
+  border: 1px solid rgba(124, 179, 66, .5);
+  color: $regular-green;
 }
 
 .avatar.background-dark-green {
   background-color: transparent;
-  border: 1px solid rgba(96, 129, 12, .5);
-  color: #60810c;
+  border: 1px solid rgba(87, 131, 41, .5);
+  color: $dark-green;
 }
 
 .avatar.background-light-green {
   background-color: transparent;
-  border: 1px solid rgba(167, 212, 51, .5);
-  color: #a7d433;
+  border: 1px solid rgba(194, 222, 168, .5);
+  color: $light-green;
 }
 
 .avatar.background-orange {
   background-color: transparent;
-  border: 1px solid rgba(212, 106, 48, .5);
-  color: #d46a30
+  border: 1px solid rgba(255, 160, 0, .5);
+  color: $regular-orange
 }
 
 .avatar.background-dark-orange {
   background-color: transparent;
-  border: 1px solid rgba(165, 71, 21, .5);
-  color: #a54715
+  border: 1px solid rgba(195, 123, 3, .5);
+  color: $dark-orange
 }
 
 .avatar.background-light-orange {
   background-color: transparent;
-  border: 1px solid rgba(254, 133, 67, .5);
-  color: #fe8543
+  border: 1px solid rgba(252, 200, 145, .5);
+  color: $light-orange;
 }
 
 .avatar.background-grey {
   background-color: transparent;
-  border: 1px solid rgba(176, 190, 197, .5);
-  color: #b0bec5
+  border: 1px solid rgba(133, 133, 133, .5);
+  color: $regular-grey
 }
 
 .avatar.background-dark-grey {
   background-color: transparent;
-  border: 1px solid rgba(69, 90, 100, .5);
-  color: #455a64
+  border: 1px solid rgba(92, 92, 92, .5);
+  color: $mid-dark-grey;
 }
 
 .avatar.background-light-grey {
   background-color: transparent;
-  border: 1px solid rgba(207, 216, 220, .5);
-  color: #cfd8dc
+  border: 1px solid rgba(173, 173, 173, .5);
+  color: $mid-light-grey
 }
 
 .avatar.background-white {
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, .5);
-  color: #fff
+  color: $sapphire-white;
 }
 
 .avatar.background-black {
   background-color: transparent;
-  border: 1px solid rgba(38, 50, 56, .5);
-  color: #263238
+  border: 1px solid rgba(51, 51, 51, .5);
+  color: $dark-grey
 }
