--- a/src/components/06-helpers/_background.scss
+++ b/src/components/06-helpers/_background.scss
@@ -8,7 +8,7 @@
 
 /*Class that is being used to add the style similar to disable*/
 .background-disable {
-  background-color: #FAFAFA;
+  background-color: $sapphire-light;
 }
 
 .background-red,
