--- a/src/components/07-trumps/_animated-label-input.scss
+++ b/src/components/07-trumps/_animated-label-input.scss
@@ -1,10 +1,12 @@
+@use '~Settings/colors'as *;
+
 .animated-label-input input[data-input]:focus {
-  border-bottom: 2px solid #00BFA5;
+  border-bottom: 2px solid $regular-alpha;
   /*primary-color*/
 }
 
 .animated-label-input input[data-input]:focus {
   border: 0;
-  border-bottom: 1px solid #00BFA5;
+  border-bottom: 1px solid $regular-alpha;
   /*primary-color*/
 }
