--- a/src/components/04-base/_switch-button.scss
+++ b/src/components/04-base/_switch-button.scss
@@ -1,3 +1,5 @@
+@use '~Settings/colors'as *;
+
 /* Toggle Button / Switch */
 input[data-switch].switch:empty {
   background-color: rgba(34, 31, 31, .26);
