--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -1,16 +1,26 @@
+@forward 'appointment-card';
 @forward 'bottom-bar-item';
 @forward 'calendar';
+@forward 'card-icon-text-link';
 @forward 'card-icon-top-text-bottom';
+@forward 'card-info/';
 @forward 'card-image-top-actions-bottom';
+@forward 'card-prescription';
 @forward 'card-top-title-with-background';
 @forward 'card-two-cols';
 @forward 'card-two-cols-big';
 @forward 'card-with-icon-on-top';
 @forward 'custom-tabs';
+@forward 'detail-page-header/';
+@forward 'exam-results/';
 @forward 'filter';
 @forward 'full-page-feedback';
+@forward 'generic-card';
 @forward 'image-background';
+@forward 'list-card/';
 @forward 'margin-container-roundBg';
-@forward 'medical-card';
+@forward 'no-appointments-card/';
+@forward 'period';
+@forward 'salute';
 @forward 'small-card';
 @forward 'user-card-with-bottom-actions';
