--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -1,1 +1,9 @@
 @forward 'appoitmentRequest-specialties';
+@forward 'carousel';
+@forward 'detail-pages';
+@forward 'exam-detail';
+@forward 'exam-list';
+@forward 'home-page';
+@forward 'hospital-detail';
+@forward 'hospital-list';
+@forward 'prescription-detail';
