--- a/src/components/02-generic/_reset.scss
+++ b/src/components/02-generic/_reset.scss
@@ -1,13 +1,13 @@
 @use '~Settings/colors'as *;
-
+@use '~Settings/fonts'as *;
 
 body,
 .content {
-  background: $sapphire-white;
+  background: transparent;
   color: $dark-grey;
-  font-family: Lato, Arial;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
+  font-family: $latin-regular;
+  font-size: 14px !important;
+  -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
