--- a/src/components/04-base/_select.scss
+++ b/src/components/04-base/_select.scss
@@ -1,6 +1,7 @@
 /*---------- $9. Custom Select ----------*/
 
 @use '~Settings/colors'as *;
+@use '~Settings/fonts'as *;
 
 select.dropdown-display {
   -webkit-appearance: none;
@@ -9,7 +10,7 @@ select.dropdown-display {
   border: 0;
   border-bottom: 1px solid $light-grey;
   border-radius: 0;
-  font-size: 16px;
+  font-size: $font-size-heading4;
   height: 50px;
   padding: 0 10px 4px;
 }
