--- a/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
@@ -7,55 +7,83 @@
   min-height: 65px;
   padding: 14px 0;
   width: 100%;
+
+  &.medium-height {
+    min-height: 70px;
+  }
+
+  &.big-height {
+    min-height: 80px;
+    padding: 10px 0;
+
+    .small-card-col-left {
+      &.valign-top {
+        padding-top: 0;
+
+        &>.icon {
+          padding-top: 10px;
+        }
+      }
+    }
+  }
+
+  &.has-bg-color {
+    background-color: $sapphire-white;
+  }
+
+  &.border-radius {
+    border-radius: 4px;
+  }
+
+  &.border-bottom {
+    border-bottom: 1px solid $light-grey;
+  }
+
+  &.border-top {
+    border-top: 1px solid $light-grey;
+  }
+
+  &.box-shadow {
+    -webkit-box-shadow: 0 2px 12px 0 $light-grey;
+    box-shadow: 0 2px 12px 0 $light-grey;
+  }
+
+  &.has-padding-l-r {
+    padding-left: 10px;
+    padding-right: 5px;
+  }
+
+  &.has-extra-padding-t-b {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+  &.active {
+    background: $regular-zeta;
+  }
 }
 
-.small-card.medium-height {
-  min-height: 70px;
-}
+.is-rtl {
+  .small-card {
+    &.has-padding-l-r {
+      padding-left: 5px;
+      padding-right: 10px;
+    }
+  }
 
-.small-card.big-height {
-  min-height: 80px;
-  padding: 10px 0;
-}
+  .small-card-col-left {
+    padding-left: 0;
+    padding-right: 12px;
+  }
 
-.small-card.has-bg-color {
-  background-color: $sapphire-white;
-}
+  .small-card-col-middle {
+    text-align: right;
+  }
 
-.small-card.border-radius {
-  border-radius: 4px;
-}
-
-.small-card.border-bottom {
-  border-bottom: 1px solid $light-grey;
-}
-
-.small-card.border-top {
-  border-top: 1px solid $light-grey;
-}
-
-.small-card.box-shadow {
-  -webkit-box-shadow: 0 2px 12px 0 $light-grey;
-  box-shadow: 0 2px 12px 0 $light-grey;
-}
-
-.small-card.has-padding-l-r {
-  padding-left: 10px;
-  padding-right: 5px;
-}
-
-.is-rtl .small-card.has-padding-l-r {
-  padding-left: 5px;
-  padding-right: 10px;
-}
-
-.small-card.has-extra-padding-t-b {
-  padding-bottom: 20px;
-  padding-top: 20px;
-}
-
-.small-card.active {
-  background: $regular-zeta;
+  .small-card-col-right {
+    padding-left: 12px;
+    padding-right: 0;
+  }
 }
 
 .small-card-col-left,
@@ -68,91 +96,69 @@
 }
 
 .small-card-col-middle {
+  line-height: 1.3;
+  text-align: left;
   word-break: break-word;
+
+  .card-title {
+    font-weight: 500;
+    padding: 0;
+  }
+
+  &.valign-top {
+    vertical-align: top;
+  }
 }
 
 .small-card-col-left {
   min-width: 35px;
   padding-right: 0;
   width: 1%;
-}
 
-.is-rtl .small-card-col-left {
-  padding-left: 0;
-  padding-right: 12px;
-}
+  &.fixedWidth {
+    max-width: auto;
+    min-width: auto;
+    width: 35px;
+  }
 
-.small-card-col-left.fixedWidth {
-  max-width: auto;
-  min-width: auto;
-  width: 35px;
-}
+  &.valign-top {
+    vertical-align: top;
 
-.small-card-col-left.valign-top {
-  vertical-align: top;
-}
+    &>.icon {
+      padding-top: 6px;
+    }
+  }
 
-.small-card-col-left img {
-  border: 2px solid $light-grey;
-  border-radius: 100%;
-  height: auto;
-  max-width: 60px;
-}
+  img {
+    border: 2px solid $light-grey;
+    border-radius: 100%;
+    height: auto;
+    max-width: 60px;
 
-.small-card-col-left img.bigger {
-  width: 60px;
-}
-
-.small-card-col-middle {
-  line-height: 1.3;
-  text-align: left;
-}
-
-.is-rtl .small-card-col-middle {
-  text-align: right;
-}
-
-.small-card-col-middle .card-title {
-  font-weight: 500;
-  padding: 0;
-}
-
-.small-card-col-middle.valign-top {
-  vertical-align: top;
+    &.bigger {
+      width: 60px;
+    }
+  }
 }
 
 .small-card-col-right {
   padding-left: 0;
   width: 35px;
+
+  &.fixedWidth150 {
+    max-width: auto;
+    min-width: auto;
+    width: 150px;
+  }
 }
 
-.small-card-col-right.fixedWidth150 {
-  max-width: auto;
-  min-width: auto;
-  width: 150px;
-}
-
-.is-rtl .small-card-col-right {
-  padding-left: 12px;
-  padding-right: 0;
-}
-
-.small-card.big-height .small-card-col-left.valign-top {
-  padding-top: 0;
-}
-
-.small-card.big-height .small-card-col-left.valign-top>.icon {
-  padding-top: 10px;
-}
-
-.small-card-col-left.valign-top>.icon {
-  padding-top: 6px;
-}
-
-
-.campaign .small-card-col-left img {
-  border: 1px solid $light-grey;
-  border-radius: 4px;
-  height: 80px;
-  max-width: 70px;
+.campaign {
+  .small-card-col-left {
+    img {
+      border: 1px solid $light-grey;
+      border-radius: 4px;
+      height: 80px;
+      max-width: 70px;
+    }
+  }
 }
