--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -6,6 +6,7 @@
 @forward 'card-info/';
 @forward 'card-image-top-actions-bottom';
 @forward 'card-prescription';
+@forward 'card-profile';
 @forward 'card-top-title-with-background';
 @forward 'card-two-cols';
 @forward 'card-two-cols-big';
