--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -1,6 +1,8 @@
 @forward 'appoitmentRequest-specialties';
+@forward 'appointment-detail';
 @forward 'carousel';
 @forward 'detail-pages';
+@forward 'doctor-detail';
 @forward 'exam-detail';
 @forward 'exam-list';
 @forward 'home-page';
