--- a/src/components/05-components/Common/layout/_header.scss
+++ b/src/components/05-components/Common/layout/_header.scss
@@ -24,9 +24,7 @@
       background-color: transparent;
 
       .header-title {
-        font-size: 18px;
-        position: absolute;
-        top: 75px;
+        font-size: $font-size-heading3;
       }
     }
   }
@@ -36,7 +34,7 @@
   color: inherit;
   display: flex;
   flex-direction: column;
-  height: 120px;
+  height: 100px;
   justify-content: center;
 
   a,
