--- a/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
@@ -27,7 +27,9 @@
     }
 
     .cardInfo__icon {
+      align-items: flex-start;
       color: $regular-grey;
+      display: flex;
       font-size: 20px;
       margin-right: 15px;
     }
