--- a/src/components/98-adjustments/_exam-detail.scss
+++ b/src/components/98-adjustments/_exam-detail.scss
@@ -59,6 +59,7 @@
 
           .cardInfo__content__wrapper {
             .title {
+              color: $sapphire-white;
               font-size: $font-size-heading4;
             }
           }
@@ -66,14 +67,13 @@
 
 
 
-        .card__label {
+        .cardInfo__label {
           //ont-size: $font-size-heading4;
           font-family: $latin-regular;
           margin-bottom: 10px;
         }
 
-        .card__info {
-          color: $sapphire-white;
+        .cardInfo__icon {
           font-size: 20px;
           margin-right: 5px;
         }
